changed margins and fix visibility issue

--- a/styles.css
+++ b/styles.css
@@ -216,16 +216,20 @@ body {
 main {
   width: 100%;
   margin: 0 auto;
-  padding: 2.5rem 1rem 2rem 1rem;
+  padding: 2rem 1rem 2rem 1rem;
   max-width: 900px;
+  padding-bottom: 8.5rem;
+  display: flex;
+  flex-direction: column;
+  /* gap: 1rem; */
 }
 .info-section {
   margin: 3rem 0;
   padding: 2rem 1.5rem;
   background: var(--card-bg);
   border-radius: 1.2rem;
-  box-shadow: var(--card-shadow);
-  opacity: 0;
+  box-shadow: var(--card-shadow); 
+
   transform: translateY(40px);
   transition: opacity 0.7s, transform 0.7s;
 }
@@ -278,12 +282,14 @@ body.dark .info-section p {
   max-width: 1100px;
   margin: 0 auto;
   padding: 6rem 1rem 2rem 1rem;
+  margin-bottom: 5rem;
 }
 .templates-main h1 {
   text-align: center;
   margin-bottom: 2.5rem;
   font-size: 2.1rem;
   font-weight: 700;
+  color: rgb(0, 0, 0);
 }
 .templates-grid {
   display: grid;
@@ -298,8 +304,7 @@ body.dark .info-section p {
   padding: 2rem 1.2rem 1.5rem 1.2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  opacity: 0;
+  align-items: center; 
   transform: translateY(40px);
   transition: opacity 0.7s, transform 0.7s;
   animation: none;
